@@ -1,3 +1,11 @@
+2010-09-02  Murray Cumming  <murrayc@murrayc.com>
+
+	Context: Make some methods const, deprecating the non-const versions.
+
+	* cairomm/context.h: device_to_user(, device_to_user_distance(),
+  user_to_device(), user_to_device_distance(): Deprecate the non-const versions,
+  adding const versions.
+
 2010-06-10  Ian Britten  <britten@caris.com>
 
 	Cleanup of most -Weffc++ warnings. Bug #28246.
